<resources>
    <string name="app_name">3F Akshaya</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="requests">Requests</string>
    <string name="chooselanguage">Choose Language</string>
    <string name="choose_language_str">Choose Language</string>
    <string name="telugu_str">తెలుగు</string>
    <string name="kannada_str">ಕನ್ನಡ</string>
    <string name="english_str">English</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="terms_agree">Please Agree Terms &amp; Conditions</string>
    <string name="otp_desc">Enter the 6 Digits Code Sent your Registered Mobile Number(s)</string>
    <string name="submit">SUBMIT</string>
    <string name="view">Views</string>
    <string name="recommendations">Recommendations</string>
    <string name="req_services">Request Services</string>
    <string name="confirm_req">Confirm Request</string>
    <string name="pole">Equipment</string>
    <string name="fertilizer">Fertilizer</string>
    <string name="labproducts">Bio Lab</string>
    <string name="loan">Loan</string>
    <string name="quickPay">QuickPay Request</string>
    <string name="quick">QuickPay</string>
    <string name="visit">Visit</string>
    <string name="req_visit">Visit Request</string>
    <string name="learning">Learning</string>
    <string name="time_peroid">Time Peroid</string>
    <string name="from_date">From Date *</string>
    <string name="to_date">To Date *</string>
    <string name="from_month">From Month *</string>
    <string name="to_month">To Month *</string>
    <string name="date">Start Date</string>
    <string name="req_loan">Loan Request</string>
    <string name="plot_id">Plot ID</string>
    <string name="code">Code</string>
    <string name="net_weight">Net Weight</string>
    <string name="location">Location</string>
    <string name="locationn">Location   :</string>
    <string name="collection">FFB Collections</string>
    <string name="collectionsWeight">Total Net Weight </string>
    <string name="collectionsCount">Total Collections</string>
    <string name="unPaidCollectionsWeight">Unpaid Collections Weight </string>
    <string name="paidCollectionsWeight">Paid Collections Weight</string>
    <string name="no_collections_found">No Collections Available</string>
    <string name="unpaidCollection">Unpaid Collections</string>
    <string name="no_unpaid_collections">Unpaid Collections are not Found</string>
    <string name="date_label">Date</string>
    <string name="collection_id">Collection ID</string>
    <string name="weight">Weight</string>
    <string name="cc">CC</string>
    <string name="status">Status</string>
    <string name="driver_name">Driver Name</string>
    <string name="vehicle_Number">Vehicle Number</string>
    <string name="collectionCenter">Collection Center</string>
    <string name="grossWeight">Gross Weight</string>
    <string name="tareWeight">Tare Weight</string>
    <string name="totalBunches">Total Bunches</string>
    <string name="acceptedBunches">Accepted Bunches</string>
    <string name="rejectedBunches">Rejected Bunches</string>
    <string name="operatorName">3F OP Collection \nOfficer Name</string>
    <string name="receiptImg">Receipt</string>
    <string name="recept">Click Here to See Receipt</string>
    <string name="datevalidation">Please Enter From Date is less than To Date</string>
    <string name="enter_Date">Please Enter From Date and To Date</string>
    <string name="no_payments_found">No Payments Found</string>
    <string name="grr">Payment for FFB(Rs)</string>
    <string name="payments">Farmer Passbook</string>
    <string name="payment_summary">Payment Summary</string>
    <string name="bank_details">Bank Details</string>
    <string name="bank_holder">Account Holder \nName</string>
    <string name="bank_name">Bank Name</string>
    <string name="account_no">Account Number</string>
    <string name="branch_name">Branch Name</string>
    <string name="ifsc">IFSC Code</string>
    <string name="next">Next</string>
    <string name="trans">Direct Farmer Transport Reimbursement</string>
    <string name="ffb_qty">Total FFB Qty (MT)</string>
    <string name="ffb">FFB Qty (MT)</string>
    <string name="adhoc_rate">Adhoc Rate per MT (Rs)</string>
    <string name="invoice_rate">Invoice Rate per MT (Rs)</string>
    <string name="memo">Memo</string>
    <string name="amount">Amount (Rs)</string>
    <string name="download">Downloaded Files</string>
    <string name="click_downlad">Click Here to Download</string>
    <string name="totalBalance">Closing Balance (Rs)</string>
    <string name="balance">Balance (Rs)</string>
    <string name="gr">GR Amount (Rs)</string>
    <string name="adjusted">Adjusted (Rs)</string>
    <string name="descriptionn">Description </string>
    <string name="trans_charges"> Transportation  \nCharges/Ton (Rs)</string>
    <string name="no_trans_found">No Direct Farmer Transport Reimbursement Found</string>
    <string name="recommendationss">Crop Maintenance Visits</string>
    <string name="plot_code">Plot Code</string>
    <string name="plot_size">Plot Size</string>
    <string name="village">Village</string>
    <string name="landmark">Landmark</string>
    <string name="yop">Year of Planting</string>
    <string name="treesAppearance">Trees Appearance</string>
    <string name="treeGrowth">Tree Growth</string>
    <string name="treeHeight">Tree Height</string>
    <string name="fruitColor">Fruit Color</string>
    <string name="fruitSize">Fruit Size</string>
    <string name="fruitHyegiene">Fruit Hygiene</string>
    <string name="plantationType">Plantation Type</string>
    <string name="health_crop">Health of Plantation Details</string>
    <string name="uprrot_crop">Uprootment Details</string>
    <string name="spalingPlanted">No.of Saplings Planted</string>
    <string name="prevPalmsCount">Previous Trees Count</string>
    <string name="plamsCount">Current Trees Count</string>
    <string name="isTreesMissing">Missing Trees</string>
    <string name="missingTreesCount">No.of Missing Trees</string>
    <string name="reasonType">Reason for Missing Trees</string>
    <string name="expectedPlamsCount">Expected Palms Count</string>
    <string name="last_date">Date of Last Visit</string>
    <string name="Frequency">Frequency</string>
    <string name="static_data">We recommend harvesting every 10 days, when the loose fruitlets are seen on the ground for optimal yield.</string>
    <string name="Frequency_harvest">Days since last Harvest</string>
    <string name="NutrientDeficiencyName">Nutrient Deficiency Name</string>
    <string name="Nameofchemicalapplied">Name of Chemical Applied</string>
    <string name="registeredDate">Registered Date</string>
    <string name="Pest">Pest</string>
    <string name="pestChemicals">Pest Chemicals</string>
    <string name="RecommendedChemical">Recommended Chemical</string>
    <string name="disease">Disease</string>
    <string name="pest">Pest Details</string>
    <string name="deases">Disease Details</string>
    <string name="nut_repo">Nutrient Deficiency Details</string>
    <string name="fert_rec">Fertilizer Recommendation Details</string>
    <string name="irrigation">Irrigation Details</string>
    <string name="irrigation_name">Irrigation Name</string>
    <string name="updated_by">Updated By</string>
    <string name="updated_date">Updated Date</string>
    <string name="inter_crop">InterCrop Details</string>
    <string name="fertilizer_crop">Fertilizers Details</string>
    <string name="fertilizerSource">Fertilizer Source</string>
    <string name="fertilizer_name">Fertilizer Name</string>
    <string name="lastAppliedDate">Last Applied Date</string>
    <string name="applyFertilizerFrequencyType">Apply Fertilizer Frequency</string>
    <string name="labour_lable">Labour</string>
    <string name="select_labour_type">Labour Service</string>
    <string name="startDate">Preferred Date</string>
    <string name="starttDate"> Preferred Date</string>
    <string name="labour">Labour Request</string>
    <string name="labour_duration">Package </string>
    <string name="comments">Comments</string>
    <string name="i_have_agree">I Agree</string>
    <string name="terms_conditions">Rate Chart - Terms &amp; Conditions</string>
    <string name="submit_req">Submit Request</string>
    <string name="harv_amount">Harvesting Amount/Ton (Rs)</string>
    <string name="pru_amount">Pruning Amount/Tree (Rs)</string>
    <string name="success_labour">Labour Request Submitted Successfully</string>
    <string name="service">Service Charges  </string>
    <string name="charge">% extra.\nThe charges will be deducted from the FFB payment in the next payment cycle</string>
    <string name="Prunning">Prunning</string>
    <string name="harvesting">Harvesting Per Ton</string>
    <string name="intercrop_prunning">Pruning With Cocoa Intercrop\nAmount/Tree (Rs)</string>
    <string name="harv_intercrop">Harvesting With Cocoa Intercrop\nAmount/Ton (Rs)</string>
    <string name="measurement">Age</string>
    <string name="Valid_service">Please Select Service Type</string>
    <string name="valid_pack">Please Select Package</string>
    <string name="serviceType">Service Type(s)</string>
    <string name="select_godown">Select Godown </string>
    <string name="payment_mode">Payment Mode </string>
    <string name="product">Product</string>
    <string name="gst">GST(%)</string>
    <string name="no_products">No Products Found</string>
    <string name="gst_amount">GST (Rs)</string>
    <string name="no_godowns">No Godowns Found</string>
    <string name="address">Address</string>
    <string name="select_product">Select Products</string>
    <string name="product_details">Product Details</string>
    <string name="notee">Note :</string>
    <string name="note">If the Products has not been Picked with in 5 Days of Requested Date,Your Order will be Cancelled.</string>
    <string name="subsidy_amt">Available Subsidy Amount(Rs)</string>
    <string name="endusermsg">Total Cost Shouldnot be 0</string>
    <string name="each_product"> Item Cost (Rs)</string>
    <string name="server_error">Server Not Responding, Please Try Again</string>
    <string name="godown_valid">Please Select Godown</string>
    <string name="success_pole">Equipment Request Submitted Successfully</string>
    <string name="subcd_amt">Subsidy Amount (Rs)</string>
    <string name="Avb_subcd_amt">Available Subsidy Amount (Rs)</string>
    <string name="product_quantity">Product &amp; Quantity</string>
    <string name="land_mark">Landmark</string>
    <string name="language_notification">Language Setup Completed</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_off">Logout</string>
    <string name="tap_text">Please Select Language Below:</string>
    <string name="btn_en">English</string>
    <string name="btn_te">Telugu</string>
    <string name="btn_kn">Kannada</string>
    <string name="only_date">Date</string>
    <string name="no_videos">No Videos Available</string>
    <string name="remarks">Remarks</string>
    <string name="loan_req">Request for Loan</string>
    <string name="loan_amount">Loan Amount (Rs)</string>
    <string name="reason_loan">Reason for Loan</string>
    <string name="my3F">My 3F</string>
    <string name="logout">LogOut</string>
    <string name="farmer_name">Farmer Name</string>
    <string name="fa_hu_name">Father/Husband Name</string>
    <string name="res_address">Residential Address</string>
    <string name="mandal">Mandal</string>
    <string name="dist">District</string>
    <string name="state">State</string>
    <string name="pin">Pin Code</string>
    <string name="mobile">Mobile Number</string>
    <string name="alter_mobile">Alternate Mobile \nNumber</string>
    <string name="email">Email ID</string>
</resources>