<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">


        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/img_profile"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:src="@mipmap/ic_launcher_round"/>

        <LinearLayout
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_weight="0.4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="@color/black"
                style="@style/Common_textView"
                android:textAlignment="textStart"
                android:text="@string/farmer_name"/>
            <TextView
                android:id="@+id/farmerName"
                android:layout_weight="0.6"
                android:layout_width="0dp"
                style="@style/Common_textView"
                android:textAlignment="textStart"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="Arun Raj"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_5"
                android:textColor="@color/black"
                style="@style/Common_textView"
                android:textAlignment="textStart"
                android:text="@string/fa_hu_name"/>
            <TextView
                android:id="@+id/fatherName"
                android:layout_weight="0.6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="Father Arun"/>
        </LinearLayout>

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            style="@style/Common_textView"
            android:textAlignment="textStart"
            android:textColor="@color/colorOrange"
            android:text="@string/res_address"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:layout_marginTop="5dp"
            android:background="@color/gray" />

        <LinearLayout
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                style="@style/Common_textView"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:text="@string/address"/>
            <TextView
                android:id="@+id/address"
                android:layout_weight="0.6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                style="@style/Common_textView"
                android:textAlignment="textStart"
                android:hint="Plot No: 132/A"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="@color/black"
                style="@style/Common_textView"
                android:textAlignment="textStart"
                android:text="@string/land_mark"/>
            <TextView
                android:id="@+id/landmark"
                android:layout_weight="0.6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text=""/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="@color/black"
                style="@style/Common_textView"
                android:textAlignment="textStart"
                android:text="@string/village"/>
            <TextView
                android:id="@+id/village"
                android:layout_weight="0.6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text=""/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="@color/black"
                style="@style/Common_textView"
                android:textAlignment="textStart"
                android:text="@string/mandal"/>
            <TextView
                android:id="@+id/mandal"
                android:layout_weight="0.6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text=""/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                style="@style/Common_textView"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:text="@string/dist"/>
            <TextView
                android:id="@+id/district"
                android:layout_weight="0.6"
                android:layout_width="0dp"

                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text=""/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="@color/black"
                style="@style/Common_textView"
                android:textAlignment="textStart"
                android:text="@string/state"/>
            <TextView
                android:id="@+id/state"
                android:layout_weight="0.6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text=""/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="@color/black"
                style="@style/Common_textView"
                android:textAlignment="textStart"
                android:text="@string/pin"/>
            <TextView
                android:id="@+id/pincode"
                android:layout_weight="0.6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text=""/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:layout_marginTop="5dp"
            android:background="@color/gray" />

        <LinearLayout
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="@color/black"
                style="@style/Common_textView"
                android:textAlignment="textStart"
                android:text="@string/mobile"/>
            <TextView
                android:id="@+id/mobilenumber"
                android:layout_weight="0.6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text=""/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="@color/black"
                style="@style/Common_textView"
                android:textAlignment="textStart"
                android:text="@string/alter_mobile"/>
            <TextView
                android:id="@+id/alternatemobilenumber"
                android:layout_weight="0.6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text=""/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                style="@style/Common_textView"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:text="@string/email"/>
            <TextView
                android:id="@+id/emailid"
                android:layout_weight="0.6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text=""/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>