<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape"
    tools:context="in.calibrage.akshaya.views.actvity.LoanActivity">
    <LinearLayout

        android:layout_width="fill_parent"
        android:layout_gravity="right"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/backlinear"
        android:background="@color/transparent">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:orientation="horizontal" >
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_left"
                android:layout_marginTop="18dp"
                android:layout_marginStart="@dimen/margin_20"
                android:layout_marginEnd="@dimen/margin_20"
                android:id="@+id/back"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginTop="15dp"
                android:text="@string/loan_req"
                android:layout_alignLeft="@+id/back"

                android:layout_marginStart="25dp"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_20" />


            <ImageView
                android:id="@+id/home_btn"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="15dp"
                android:src="@drawable/home"
                android:textColor="#ff0000ff"
                android:layout_marginTop="3dp"
                />

        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"

        android:layout_below="@+id/backlinear"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_5"
        android:background="@color/half_black2"
        android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"

    android:layout_height="wrap_content"
    android:id="@+id/amount_label"
    android:orientation="vertical">
    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loan_amount"
        android:paddingTop="5dp"
        android:textColor="@color/white_new"
        android:drawableRight="@drawable/star"
        android:textSize="@dimen/album_title"
        android:drawablePadding="5dp"
        android:layout_marginStart="6dp"
        />
    <EditText
        android:id="@+id/date_display"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:textColor="@color/white_new"
        android:layout_margin="8dp"
        android:padding="5dp"
        android:layout_marginStart="8dp"
        android:inputType="number"
        android:layout_marginEnd="@dimen/_8dp"
        android:background="@drawable/spinner_bg"
        android:textSize="@dimen/album_title"
        android:hint="@string/loan_amount" />
</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_below="@+id/amount_label"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reason_loan"
            android:paddingTop="5dp"
            android:textColor="@color/white_new"
            android:drawableRight="@drawable/star"
            android:textSize="@dimen/album_title"
            android:drawablePadding="5dp"
            android:layout_marginStart="6dp"
            />
        <EditText
            android:id="@+id/reason"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:textColor="@color/white_new"
            android:layout_margin="8dp"
            android:padding="5dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="@dimen/_8dp"
            android:background="@drawable/spinner_bg"
            android:textSize="@dimen/album_title"
            android:hint="@string/reason_loan"
            android:inputType="textMultiLine"/>
    </LinearLayout>
    </LinearLayout>
    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/i_have_agree"
        android:textSize="16dp"
        android:layout_centerInParent="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="70dp"
        />

    <TextView
        android:id="@+id/terms"
        android:layout_toRightOf="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terms_conditions"
        android:textSize="16dp"
        android:layout_centerInParent="true"
        android:textColor="@color/colorOrange"
        android:layout_marginStart="@dimen/margin_5"

        />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkBox"
        android:text="@string/req_loan"
        android:shadowColor="@android:color/transparent"
        android:padding="15dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/button_bg"
        android:textColor="@color/colorOrange"
        android:id="@+id/req_loan"
        android:textStyle="bold"
        android:textSize="@dimen/text_size_15"/>


</RelativeLayout>